2008-04-10  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main-window.c:
	* src/storage-manager.c: Fix use of memory after freeing it, and
	actually delete entries from the database when they're blanked.

2008-04-08  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.ac:
	* data/diary.ui:
	* src/Makefile.am:
	* src/main-window.c:
	* src/main.c:
	* src/main.h:
	* src/storage-manager.c:
	* src/storage-manager.h: Add encryption support for the database, with
	full backwards-compatibility for the old database filename. Also make
	sure to save the current entry on quitting.

2008-04-03  Philip Withnall  <philip@tecnocode.co.uk>

	* COPYING:
	* src/add-link-dialog.c:
	* src/add-link-dialog.h:
	* src/interface.c:
	* src/interface.h:
	* src/link.c:
	* src/link.h:
	* src/main-window.c:
	* src/main-window.h:
	* src/main.c:
	* src/main.h:
	* src/storage-manager.c:
	* src/storage-manager.h: Relicensed from GPLv2+ to GPLv3+.

2008-04-02  Philip Withnall  <philip@tecnocode.co.uk>

	* src/storage-manager.c: Free the query strings with SQLite's memory
	functions rather than GLib's.

============ Version 0.1

2008-03-30  Philip Withnall  <philip@tecnocode.co.uk>

	* src/storage-manager.c: Fix the time limit on editing entries.

2008-03-30  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main.c: Load the database file from the user's data directory,
	rather than the build directory.

2008-03-30  Philip Withnall  <philip@tecnocode.co.uk>

	* NEWS:
	* README: Updated documentation.
	* src/interface.c: Allowed interface file to load from either package
	data directory or build directory.

2008-03-30  Philip Withnall  <philip@tecnocode.co.uk>

	* src/links/email.c: Completely removed e-mail link type.

2008-03-30  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main-window.c:
	* src/storage-manager.c:
	* src/storage-manager.h: Added some basic statistics on the about
	dialogue.

2008-03-30  Philip Withnall  <philip@tecnocode.co.uk>

	* src/Makefile.am:
	* src/link.c: